Updated website to better utilize wide screens

--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,25 @@ title: Julius Häger
 description: My portfolio
 author: "Julius Häger"
 
+github_username:  NogginBops
+
+url: "https://nogginbops.github.io"
+
+plugins:
+  - jekyll-coffeescript
+  - jekyll-default-layout
+  - jekyll-gist
+  - jekyll-github-metadata
+  - jekyll-optional-front-matter
+  - jekyll-paginate
+  - jekyll-readme-index
+  - jekyll-titles-from-headings
+  - jekyll-relative-links
+  - jekyll-remote-theme
+
+include:
+  - README.md
+
 #theme: minima
 remote_theme: jekyll/minima
 
